--- a/lidar_3d/基于离线地图的实时定位.md
+++ b/lidar_3d/基于离线地图的实时定位.md
@@ -8,6 +8,7 @@
   - [使用 LIDAR 数据 NDT 配准位姿进行 ESKF 的更新过程](#使用-lidar-数据-ndt-配准位姿进行-eskf-的更新过程)
   - [点云地图的加载卸载](#点云地图的加载卸载)
 - [小结](#小结)
+- [感谢](#感谢)
 - [reference](#reference)
 
 # 基于离线点云地图的实时定位
@@ -308,6 +309,10 @@ void Fusion::LoadMap(const SE3& pose) {
 4. 与 RTK 不同的时，点云定位需要事先指定一个大致的位置，而不是像 RTK 那直接给出定位结果。如果初始位置精度不够，我们还需要对附近的位置和角度进行网格搜索，才能确定自身位置。
 5. 点云定位对动态场景有一定的适应性。只要主体结构（通常是建筑物）变化不大，一些小型的动态物体（人群、车辆等等）通常不会对点云定位产生很大的干扰
 6. 如果定位场景属于开阔场地，我们还可以对点云地图进行压缩，形成 2.5D 地图 。这种压缩之后的地图可以大幅减少所需的存储空间，对自动驾驶应用更加友好
+
+# 感谢
+
+在此感谢 [自动驾驶与机器人中的SLAM技术](https://github.com/gaoxiang12/slam_in_autonomous_driving) 作者 高翔老师
 
 # reference
 
